<resources>
    <string name="app_name">Murky = GG</string>

    <string name="hello_name">Hello! \n\nMake sure that your location services are active, so that we can find the closest Blizzard server to you.</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash">Splash</string>
    <string name="submit">Submit</string>
    <string name="gps_button">Find the Closest Server to me!</string>
    <string name="server_blurb">The closest Blizzard server to your location is:</string>
    <string name="server_name_city">Server name: %1$s\nLocation: %2$s</string>
    <string name="where_am_i">Your Location is: </string>
    <string name="title_activity_main_menu">MainMenu</string>
    <string name="coming_soon">[Other features will be here... soon]</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_murky_opinion">MurkyOpinion</string>

    <string name="murky_question">What is your opinion of Murky?</string>
    <string name="murky_option_one">I think Murky is OP. pls nerf Blizz.</string>
    <string name="murky_option_two">Murky is terrible! He\'s basically a lane minion.</string>
    <string name="murky_option_three">Do I look like I care about Murky?</string>

    <string name="murky_answer_one">Murky is OP!</string>
    <string name="murky_answer_two">Murky buff, please.</string>
    <string name="murky_answer_three">What even is Murky.</string>

    <string name="loading">Loading...mrgl</string>
    <string name="battlegrounds">Battlegrounds</string>

    <string name="timers">Mercenary Camp Timers</string>

    <string name="camps">Camp Type</string>
    <string name="bruiser_name">Bruiser Camps</string>
    <string name="siege_name">Siege Camps</string>
    <string name="boss_name">Boss Camp</string>

    <string name="initial">Initial Spawn Time</string>
    <string name="respawn">Respawn Time</string>

    <string name="initial_spawn">2 Minutes</string>
    <string name="bruiser_respawn">4 Minutes</string>
    <string name="siege_respawn">3 Minutes</string>
    <string name="boss_respawn">5 Minutes</string>

    <string name="no_boss">*This map does NOT have a boss camp*</string>
    <string name="yes_boss">*This map does have a boss camp*</string>
    <string name="top">Top Map</string>
    <string name="mines">Mines Map</string>


</resources>
