<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:layout_weight="5"
    tools:context="edu.virginia.cs.cs4720.heroesmobile.BattlegroundScreen">


    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/bg_list"
        android:layout_below="@+id/tableLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/battlegrounds"
        android:id="@+id/bg_title_bar"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:gravity="center_horizontal"
        android:textSize="@dimen/abc_dialog_padding_material" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/timers"
        android:id="@+id/timers"
        android:layout_below="@+id/bg_title_bar"
        android:layout_alignLeft="@+id/bg_title_bar"
        android:layout_alignStart="@+id/bg_title_bar"
        android:gravity="center_horizontal" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/abc_action_bar_overflow_padding_start_material"
        android:id="@+id/tableLayout"
        android:layout_below="@+id/timers"
        android:layout_centerHorizontal="true">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/abc_action_bar_overflow_padding_start_material">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/camps"
                android:id="@+id/camp_type"
                android:layout_column="0"
                android:padding="@dimen/abc_action_bar_overflow_padding_start_material"
                android:minHeight="28dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bruiser_name"
                android:id="@+id/bruisers"
                android:layout_column="1"
                android:padding="@dimen/abc_action_bar_overflow_padding_start_material" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/siege_name"
                android:id="@+id/siege_giants"
                android:layout_column="2"
                android:padding="@dimen/abc_action_bar_overflow_padding_start_material" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/boss_name"
                android:id="@+id/boss"
                android:layout_column="3"
                android:padding="@dimen/abc_action_bar_overflow_padding_start_material" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/abc_action_bar_overflow_padding_start_material">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/initial"
                android:id="@+id/initial"
                android:layout_column="0"
                android:layout_gravity="center_horizontal"
                android:padding="@dimen/abc_action_bar_overflow_padding_start_material" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/initial_spawn"
                android:id="@+id/bruiser_init_spawn"
                android:layout_column="1"
                android:padding="@dimen/abc_action_bar_overflow_padding_start_material" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/initial_spawn"
                android:id="@+id/siege_init_spawn"
                android:layout_column="2"
                android:padding="@dimen/abc_action_bar_overflow_padding_start_material" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/initial_spawn"
                android:id="@+id/boss_init_spawn"
                android:layout_column="3"
                android:padding="@dimen/abc_action_bar_overflow_padding_start_material" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/abc_action_bar_overflow_padding_start_material">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/respawn"
                android:id="@+id/respawn"
                android:layout_column="0"
                android:padding="@dimen/abc_action_bar_overflow_padding_start_material" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bruiser_respawn"
                android:id="@+id/bruisers_respawn"
                android:layout_column="1"
                android:padding="@dimen/abc_action_bar_overflow_padding_start_material" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/siege_respawn"
                android:id="@+id/siege_respawn"
                android:layout_column="2"
                android:padding="@dimen/abc_action_bar_overflow_padding_start_material" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/boss_respawn"
                android:id="@+id/boss_respawn"
                android:layout_column="3"
                android:padding="@dimen/abc_action_bar_overflow_padding_start_material" />
        </TableRow>

    </TableLayout>

</RelativeLayout>
