<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
    android:layout_height="fill_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Home">

   <!--Hello [Name] TextView box-->
    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/textView2"
        android:text="@string/hello_name"
        android:visibility="visible"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="93dp" />

    <!--Find my location button-->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gps_button"
        android:id="@+id/button2"
        android:visibility="visible"
        android:layout_marginTop="88dp"
        android:onClick="showGPS"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/where_am_i"
        android:id="@+id/textView4"
        android:visibility="gone"
        android:layout_marginTop="79dp"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/title_activity_splash"
        android:id="@+id/latitude"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="55dp"
        android:visibility="gone" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/title_activity_splash"
        android:id="@+id/longitude"
        android:layout_below="@+id/latitude"
        android:layout_centerHorizontal="true"
        android:visibility="gone" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/server_blurb"
        android:id="@+id/server_blurb"
        android:layout_marginTop="80dp"
        android:layout_below="@+id/longitude"
        android:layout_centerHorizontal="true"
        android:visibility="gone" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/server_name_city"
        android:id="@+id/server_name_city"
        android:layout_below="@+id/server_blurb"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp"
        android:gravity="center_horizontal"
        android:visibility="gone" />

</RelativeLayout>
