<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
    android:layout_height="fill_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Home">

    <!--Fill in your name EditText-->
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/editText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="129dp"
        android:visibility="visible"/>

    <!--"Tell me your name" TextView-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/name_box"
        android:id="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="64dp"
        android:visibility="visible"/>

    <!--Submit Button-->
    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:id="@+id/button"
        android:onClick="setName"
        android:visibility="visible"
        android:layout_marginTop="44dp"
        android:layout_below="@+id/editText"
        android:layout_centerHorizontal="true" />

    <!--Hello [Name] TextView box-->
    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/textView2"
        android:text="@string/hello_name"
        android:visibility="gone"
        android:layout_alignBottom="@+id/button2"
        android:layout_marginBottom="93dp"
        android:gravity="center" />

    <!--Find my location button-->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gps_button"
        android:id="@+id/button2"
        android:visibility="gone"
        android:layout_marginTop="171dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:onClick="showGPS"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/where_am_i"
        android:id="@+id/textView4"
        android:layout_alignBottom="@+id/button"
        android:layout_centerHorizontal="true"
        android:visibility="gone" />

</RelativeLayout>
